[package]
name = "leangz"
version = "0.1.3"
edition = "2021"
default-run = "leangz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
zstd-train = ["zstd", "zstd/zdict_builder"]
zstd-dict = ["zstd"]
default = ["zstd", "zstd-dict"]

[dependencies]
memmap2 = "0.7"
byteorder = "1.4"
zerocopy = "0.6"
hashbrown = "0.14"
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.12", optional = true }
rayon = "1.7"
serde_json = "1.0"

[[bin]]
name = "leangz"
path = "src/main.rs"
doc = false

[[bin]]
name = "leantar"
path = "src/tar.rs"
doc = false
